fix layout bugs, remove category in card

--- a/styles.css
+++ b/styles.css
@@ -78,13 +78,13 @@ nav {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   place-items: center;
-  gap: 5px;
+  gap: 10px;
   max-width: 1024px;
   margin: 0 auto;
 }
 
 .card {
-  height: 280px;
+  height: 240px;
   padding: 10px;
   background-color: #fff;
   width: 147px;
@@ -173,12 +173,20 @@ img {
   #list {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
+    gap: 10px;
+  }
+  .card {
+    width: 166px;
   }
 }
 @media screen and (min-width: 1000px) {
   #list {
     display: grid;
-    grid-template-columns: repeat(6, 1fr);
+    grid-template-columns: repeat(5, 1fr);
+    gap: 10px;
+  }
+  .card {
+    width: 180px;
   }
 }
 
